Edited Wesbite HTML

--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@ document.addEventListener('DOMContentLoaded', function(e) {
           fight cancer. At Hopkins, I am studying Epidemiology and
           Biostatistics and in my career, I want to use these skills to
           better understand health outcomes in vulnerable populations.
-          Leveraging my research training, I want to help find ways to
-          reduce health disparities, particularly in mental health and
-          inflammatory disorders.</p>
+          Leveraging my research training, I want to reduce health
+          disparities, particularly in mental health and inflammatory
+          disorders.</p>
           <p>Along with science and public health, I am also interested
           in travel and photography. While living in Madrid, I visited
           over 20 new places. I always brought my film camera with me to
@@ -181,9 +181,9 @@ document.addEventListener('DOMContentLoaded', function(e) {
               studying Epidemiology and Biostatistics and in my career,
               I want to use these skills to better understand health
               outcomes in vulnerable populations. Leveraging my research
-              training, I want to help find ways to reduce health
-              disparities, particularly in mental health and
-              inflammatory disorders.</p>
+              training, I want to reduce health disparities,
+              particularly in mental health and inflammatory
+              disorders.</p>
               <p>Along with science and public health, I am also
               interested in travel and photography. While living in
               Madrid, I visited over 20 new places. I always brought my
