--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ document.addEventListener('DOMContentLoaded', function(e) {
           Health</strong> | Baltimore, MD</p>
           <p>Master of Public Health | July 2023 - May 2024</p>
           <p><strong>Tulane University</strong> | New Orleans, LA</p>
-          <p>Bachelor of Science in Neuroscience. | August 2016 - May
+          <p>Bachelor of Science in Neuroscience | August 2016 - May
           2020</p>
           </div>
           <div id="experience" class="section level2">
@@ -199,8 +199,8 @@ document.addEventListener('DOMContentLoaded', function(e) {
               <p>Master of Public Health | July 2023 - May 2024</p>
               <p><strong>Tulane University</strong> | New Orleans,
               LA</p>
-              <p>Bachelor of Science in Neuroscience. | August 2016 -
-              May 2020</p>
+              <p>Bachelor of Science in Neuroscience | August 2016 - May
+              2020</p>
               </div>
               <div id="experience" class="section level2">
               <h2>Experience</h2>
